	* fixed not passing &supportcrypto=1 when encryption is disabled
	* introduced an upload mode, which torrents are switched into when
	  it hits a disk write error, instead of stopping the torrent.
	  this lets libtorrent keep uploading the parts it has when it
	  encounters a disk-full error for instance
	* improved disk error handling and expanded use of error_code in
	  error reporting. added a bandwidth state, bw_disk, when waiting
	  for the disk io thread to catch up writing buffers
	* improved read cache memory efficiency
	* added another cache flush algorithm to write the largest
	  contiguous blocks instead of the least recently used
	* introduced a mechanism to be lighter on the disk when checking torrents
	* applied temporary memory storage optimization to when checking
	  a torrent as well
	* removed hash_for_slot() from storage_interface. It is now implemented
	  by using the readv() function from the storage implementation
	* improved IPv6 support by announcing twice when necessary
	* added feature to set a separate global rate limit for local peers
	* added preset settings for low memory environments and seed machines
	  min_memory_usage() and high_performance_seeder()
	* optimized overall memory usage for DHT nodes and requests, peer
	  entries and disk buffers
	* change in API for block_info in partial_piece_info, instead of
	  accessing 'peer', call 'peer()'
	* added support for fully automatic unchoker (no need to specify
	  number of upload slots). This is on by default
	* added support for changing socket buffer sizes through
	  session_settings
	* added support for merkle hash tree torrents (.merkle.torrent)
	* added 'seed mode', which assumes that all files are complete
	  and checks hashes lazily, as blocks are requested
	* added new extension for file attributes (executable and hidden)
	* added support for unbuffered I/O for aligned files
	* added workaround for sparse file issue on Windows Vista